force-app/main/default/objects/Materiau__c/Materiau__c.object-meta.xml
<CustomObject>
    <label>Matériau</label>
    <nameField>
        <label>Nom</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Matériaux</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>