force-app/main/default/objects/Materiau__c/fields/Date_de_d_but_d_utilisation_du_lot__c.field-meta.xml
<CustomField>
    <fullName>Date_de_d_but_d_utilisation_du_lot__c</fullName>
    <label>Date de début d&apos;utilisation du lot</label>
    <type>Date</type>
</CustomField>