force-app/main/default/objects/Materiau__c/fields/Mat_riau__c.field-meta.xml
<CustomField>
    <fullName>Mat_riau__c</fullName>
    <label>Matériau</label>
    <length>255</length>
    <type>Text</type>
</CustomField>