force-app/main/default/objects/Materiau__c/fields/Num_ro_CE__c.field-meta.xml
<CustomField>
    <fullName>Num_ro_CE__c</fullName>
    <label>Numéro CE</label>
    <length>12</length>
    <type>Text</type>
</CustomField>