force-app/main/default/objects/Materiau__c/fields/Produit__c.field-meta.xml
<CustomField>
    <fullName>Produit__c</fullName>
    <label>Produit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ACRYLIC DENTURE</fullName>
            </value>
            <value>
                <fullName>CAST METAL COCR FRAMEWORK</fullName>
            </value>
            <value>
                <fullName>COMPOSITE</fullName>
            </value>
            <value>
                <fullName>EMAX</fullName>
            </value>
            <value>
                <fullName>EMAX CAD</fullName>
            </value>
            <value>
                <fullName>FLEXIBLE DENTURE</fullName>
            </value>
            <value>
                <fullName>FMC</fullName>
            </value>
            <value>
                <fullName>IMPLANT BAR</fullName>
            </value>
            <value>
                <fullName>PFM</fullName>
            </value>
            <value>
                <fullName>POST&amp;CORE</fullName>
            </value>
            <value>
                <fullName>ZIRCONIA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>