force-app/main/default/objects/Materiau__c/fields/Reference__c.field-meta.xml
<CustomField>
    <fullName>Reference__c</fullName>
    <label>Reference</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>