force-app/main/default/objects/Materiau__c/fields/Sous_type__c.field-meta.xml
<CustomField>
    <fullName>Sous_type__c</fullName>
    <label>Sous-type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>