force-app/main/default/objects/Materiau__c/fields/Teinte__c.field-meta.xml
<CustomField>
    <fullName>Teinte__c</fullName>
    <label>Teinte</label>
    <length>255</length>
    <type>Text</type>
</CustomField>