force-app/main/default/objects/Materiau__c/listViews/COMPOSITE.listView-meta.xml
<ListView>
    <fullName>COMPOSITE</fullName>
    <columns>NAME</columns>
    <columns>Teinte__c</columns>
    <columns>Num_ro_de_lot__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Mat_riau__c</field>
        <operation>equals</operation>
        <value>COMPOSITE</value>
    </filters>
    <label>COMPOSITE</label>
</ListView>