force-app/main/default/objects/Materiau__c/listViews/E_MAX.listView-meta.xml
<ListView>
    <fullName>E_MAX</fullName>
    <columns>NAME</columns>
    <columns>Teinte__c</columns>
    <columns>Num_ro_de_lot__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Mat_riau__c</field>
        <operation>equals</operation>
        <value>E-MAX</value>
    </filters>
    <label>E-MAX</label>
</ListView>