force-app/main/default/objects/Materiau__c/listViews/PFM.listView-meta.xml
<ListView>
    <fullName>PFM</fullName>
    <columns>NAME</columns>
    <columns>Teinte__c</columns>
    <columns>Num_ro_de_lot__c</columns>
    <filterScope>Everything</filterScope>
    <label>PFM</label>
</ListView>